--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -10,6 +10,12 @@
 
   <title>Reyvery Market</title>
 
+<style>
+    .carousel-inner,
+    .carousel-item {
+        border-radius: 15px; /* Ajusta el valor de "border-radius" según tus preferencias */
+    }
+</style>
 
   <!-- Bootstrap core CSS -->
   <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
@@ -29,10 +35,45 @@
     <div class="container">
 
       <!-- Jumbotron Header -->
-      <header class="jumbotron my-4" style="background-color: #d7d7a8;">
+      <header class="jumbotron my-4" style="background-color: #d7d7a8; height: 200px !important;">
         <h1 class="display-3" style="font-family: 'Lucida Sans', sans-serif;">Bienvenido a Reyvery Market</h1>
         <p class="lead">Tu tienda en Línea</p>
       </header>
+       <!-- Carrusel de imágenes -->
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicadores del carrusel -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <!-- Agrega más indicadores según la cantidad de imágenes -->
+        </ol>
+
+        <!-- Imágenes del carrusel -->
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img th:src="@{/images/banner0.jpg}" alt="Imagen 1">
+            </div>
+            <div class="carousel-item">
+                <img th:src="@{/images/banner1.jpg}" alt="Imagen 2">
+            </div>
+            <div class="carousel-item">
+                <img th:src="@{/images/Pan.jpg}" alt="Imagen 3">
+            </div>
+            <!-- Agrega más imágenes según sea necesario -->
+        </div>
+
+        <!-- Controles del carrusel -->
+        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"style="background-color: #3b7714;"></span>
+            <span class="sr-only">Anterior</span>
+        </a>
+        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true" style="background-color: #3b7714;"></span>
+            <span class="sr-only">Siguiente</span>
+        </a>
+    </div>
+    <br>
 
       <!-- Page Features -->
       <div class="row text-center">
