--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -28,7 +28,7 @@
       <a class="navbar-brand" th:href="@{/}">Reyvery Market</a>
 
       <form class="form-inline my-2 my-lg-0" method="post"
-      action="#">
+      th:action="@{/busqueda}">
       <input class="form-control mr-sm-2" type="search"
       placeholder="Buscar" aria-label="Search" name="nombre"
       autocomplete="off">
