--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -44,7 +44,7 @@
         <li class="nav-item"><a class="nav-link"
           th:href="@{/getCart}">Carrito</a></li>
           <li class="nav-item"><a class="nav-link"
-            href="login.html">Acceso</a></li>
+            th:href="@{/usuario/login}">Acceso</a></li>
           </ul>
         </div>
       </div>
