--- a/src/main/resources/templates/usuario/detallecompra.html
+++ b/src/main/resources/templates/usuario/detallecompra.html
@@ -8,11 +8,11 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Reyvery Market</title>
+  <title>Detalle Compra</title>
 
 
-   <!-- Bootstrap core CSS -->
-  <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+ <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
 
   <!-- Custom styles for this template -->
   <link th:href="@{/css/heroic-features.css}" rel="stylesheet">
@@ -22,23 +22,25 @@
 <body>
 
   <!-- Navigation -->
-  <div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}"> 
+ <div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}"> 
   </div>
   
    <div th:include="usuario/template_usuario.html::header-user" th:unless="${sesion==null}">
    </div>
+
     <!-- Page Content -->
     <div class="container">
 
 
       <!-- Page Heading/Breadcrumbs -->
       <h1 class="mt-4 mb-3">
-        Reyvery Market - <small>Compras</small>
+        Reyvery Market - <small>Detalles</small>
       </h1>
 
       <ol class="breadcrumb" style="background-color: #d7d7a8;">
         <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Compras</li>
+        <li class="breadcrumb-item"><a th:href="@{/usuario/compras}">Compras</a></li>
+        <li class="breadcrumb-item active">Detalle de Compra</li>
       </ol>
 
       <!-- Blog Post -->
@@ -49,18 +51,18 @@
             <table class="table">
               <thead style="background-color: #3b7714; color: white;">
                 <tr>
-                  <th scope="col">No. de Orden</th>
-                  <th scope="col">Fecha</th>
-                  <th scope="col">Valor</th>
-                  <th scope="col">Acción</th>
+                  <th scope="col">Cantidad</th>
+                  <th scope="col">Producto</th>                  
+                  <th scope="col">Precio</th>
+                  <th scope="col">Total</th>                  
                 </tr>
               </thead>
               <tbody>
-                <tr th:each="orden: ${ordenes}">
-                  <td th:text="${orden.numero}"></td>
-                  <td th:text="${orden.fechaCreacion}"></td>
-                  <td th:text="${orden.total}"></td>
-                  <td><a th:href="@{/usuario/detalle/{id} (id=${orden.id})}" class="btn btn-success">Ver Detalle</a></td>
+                <tr th:each="detalle:${detalles}">
+                  <td th:text="${detalle.cantidad}"></td>
+                  <td th:text="${detalle.nombre}"></td>
+                  <td th:text="${detalle.precio}"></td>
+                  <td th:text="${detalle.total}"></td>
                 </tr>
               </tbody>
             </table>
@@ -83,3 +85,4 @@
 </body>
 
 </html>
+
