encriptar contraseñas, sus clases, ajustes a la vista, boton de retorno a inicio,hover a las imagenes de productos para dar el efecto de acercado,correccón al numero de la orden se mostraba en pares ahora esta bien

--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -69,6 +69,8 @@
                 </tr>
               </tbody>
             </table>
+            <!-- Botón de retorno a Home -->
+          <a th:href="@{/}" class="btn btn-primary">Seguir Comprando</a>
           </div>
 
           <div class="col-lg-3">
