--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -49,7 +49,7 @@
         <div class="col-md-4"></div>
         <div class="col-md-8">
           <div class="card-body">
-            <h2>Registro</h2>
+            <h2>Registro de Sesión</h2>
 
           </div>
         </div>
