--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -77,7 +77,7 @@
         <li class="nav-item dropdown"><a
 							class="nav-link dropdown-toggle" href="#"
 							id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-							aria-haspopup="true" aria-expanded="false"> USER </a>
+							aria-haspopup="true" aria-expanded="false"> USUARIO </a>
 							
 							<div class="dropdown-menu"
 								aria-labelledby="navbarDropdownMenuLink">
