--- a/src/main/resources/templates/usuario/compras.html
+++ b/src/main/resources/templates/usuario/compras.html
@@ -64,6 +64,8 @@
                 </tr>
               </tbody>
             </table>
+            <!-- Botón de retorno a Home -->
+          <a th:href="@{/}" class="btn btn-primary">Volver a Inicio</a>
           </div>
         </div>
       </div>
