--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -50,7 +50,7 @@
         </div>
         <div class="col-md-8">
           <div class="card-body">
-            <h2>Ingresar</h2>
+            <h2>Inicio de Sesión Tienda</h2>
 
           </div>
         </div>
@@ -58,10 +58,10 @@
     </div>
 
     
-    <form  th:action="@{/usuario/acceder}" method="post">
+    <form  th:action="@{/usuario/login}" method="post">
       <div class="form-group">
         <label for="email"> Email:  </label>      
-        <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email" required autocomplete="off"> 
+        <input type="email" class="form-control" id="username" name="username" placeholder="Ingrese su email" required autocomplete="off"> 
 
       </div>
 
