--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -45,7 +45,8 @@
         <div class="card-body" style="border: 2px solid #3b7714;">
           <div class="row">
             <div class="col-lg-6">
-              <a href="#"> <img class="img-fluid rounded"
+				
+              <a href="#" class="image-zoom"> <img class="img-fluid rounded"
                 th:src="@{/images/{img} (img=${producto.imagen})}"  alt="">
               </a>
             </div>
@@ -78,6 +79,13 @@
 
 
     </div>
+    
+    <style>
+    .image-zoom:hover img {
+        transform: scale(1.05); /* Puedes ajustar el factor de escala según tus preferencias */
+        transition: transform 0.3s ease; /* Añade una transición suave para un efecto más agradable */
+    }
+</style>
     <!-- /.container -->
 
     <!-- Footer -->
