Se realizo la clase para exportar en pdf, en excel y se asignaron botones en la vista ver productos para llamar al pdf y al xlxs, ultimos ajustes botones de retorno a inicio, y cambio de la imagen del banner ahora con logo en el carrucel

--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -41,7 +41,18 @@
   </ol>
 
   <a class="btn btn-primary" th:href="@{/productos/create}" > Crear Producto</a>
-  <h2>Productos</h2>
+  <!-- Reporte -->
+  <a class="btn btn-success" th:href="@{/productos/exportarPDF}" > Exportar a PDF</a>
+  <!-- Reporte Excel -->
+  <a class="btn btn-success" th:href="@{/productos/exportarExcel}" style="background-color: #3b7714; color: white;">Exportar a Excel</a>
+  <!-- Inicio -->
+  <a class="btn btn-warning" th:href="@{/administrador}" > Volver a Inicio</a>
+
+  <br>
+  <br>
+  
+  <h2>Productos de Reyvery Market:</h2>
+  
   <table class="table">
     <thead>
       <tr>
