Cambios en la vista administrador

--- a/src/main/resources/templates/administrador/usuarios.html
+++ b/src/main/resources/templates/administrador/usuarios.html
@@ -35,7 +35,7 @@
     Reyvery Market <small>Usuarios</small>
   </h1>
 
-  <ol class="breadcrumb">
+  <ol class="breadcrumb" style="background-color: #d7d7a8;">
     <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
     <li class="breadcrumb-item active">Ver Usuarios</li>
   </ol>
