--- a/src/main/resources/templates/productos/edit.html
+++ b/src/main/resources/templates/productos/edit.html
@@ -37,7 +37,7 @@
         Reyvery Market - <small>Productos</small>
       </h1>
 
-      <ol class="breadcrumb">
+      <ol class="breadcrumb" style="background-color: #d7d7a8;">
         <li class="breadcrumb-item"><a href="index.html">Home</a></li>
         <li class="breadcrumb-item active">Actualizar Producto</li>
       </ol>
