--- a/src/main/resources/templates/productos/show.html
+++ b/src/main/resources/templates/productos/show.html
@@ -35,7 +35,7 @@
     Reyvery Market - <small>Productos</small>
   </h1>
 
-  <ol class="breadcrumb">
+  <ol class="breadcrumb" style="background-color: #d7d7a8;">
     <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
     <li class="breadcrumb-item active">Ver Productos</li>
   </ol>
@@ -53,7 +53,7 @@
   
   <h2>Productos de Reyvery Market:</h2>
   
-  <table class="table">
+  <table class="table table-success table-bordered text-center">
     <thead>
       <tr>
         <th scope="col">Nombre</th>
