--- a/src/main/resources/templates/administrador/detalleorden.html
+++ b/src/main/resources/templates/administrador/detalleorden.html
@@ -35,7 +35,7 @@
         Spring eCommerce <small>Detalles</small>
       </h1>
 
-      <ol class="breadcrumb">
+      <ol class="breadcrumb" style="background-color: #d7d7a8;">
         <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
         <li class="breadcrumb-item"><a th:href="@{/administrador/ordenes}">Compras</a></li>
         <li class="breadcrumb-item active">Detalle de Compra</li>
