--- a/src/main/resources/templates/administrador/ordenes.html
+++ b/src/main/resources/templates/administrador/ordenes.html
@@ -35,7 +35,7 @@
         Reyvery Market <small>Ordenes</small>
       </h1>
 
-      <ol class="breadcrumb">
+      <ol class="breadcrumb" style="background-color: #d7d7a8;">
         <li class="breadcrumb-item"><a th:href="@{/administrador}">Home</a></li>
         <li class="breadcrumb-item active">Ordenes</li>
       </ol>
