--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -1,7 +1,7 @@
 
 <!-- Navigation -->
   <div th:fragment="header">
-	  <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+	  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: #3b7714;">
     <div class="container">
       <a class="navbar-brand" th:href="@{/administrador}">Reyvery Market</a>
 
@@ -25,7 +25,7 @@
 							aria-haspopup="true" aria-expanded="false"> ADMINISTRADOR </a>
 							
 							<div class="dropdown-menu"
-								aria-labelledby="navbarDropdownMenuLink">
+								aria-labelledby="navbarDropdownMenuLink" style="background-color: #d7d7a8;">
 								<a class="dropdown-item" th:href="@{/productos}">Productos</a> 
 								<a class="dropdown-item" th:href="@{/administrador/usuarios}">Usuarios</a> 
 								<a class="dropdown-item" th:href="@{/administrador/ordenes}">Ordenes</a> 
@@ -39,7 +39,7 @@
   
     <!-- Footer -->
     <div th:fragment="footer">
-		<footer class="py-5 bg-primary">
+		<footer class="py-5" style="background-color: #3b7714;">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; Reyvery Market - Derechos Reservados 2023</p>
       </div>
